# agent-apps

./: .gitignore  pyproject.toml
experiments/dspy_lab/: explore.ipynb  pyproject.toml
experiments/smolagents_lab/: explore.ipynb  pyproject.toml
