[project]
name = "agent-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.2.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "marimo>=0.10.19",
    "smolagents[litellm]>=1.7.0",
]

[tool.uv.workspace]
members = ["experiments/dspy_lab", "experiments/smolagents_lab"]
